--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@ class="btn-outline-primary d-lg-none position-absolute top-0 end-0 m-3 mt-1 simp
       <div class="carousel-item active  text-white p-5 align-items-center">
         <div class="d-flex justify-content-center">
           <div class="card " >
-            <img src="img/لقطة الشاشة 2025-06-23 183823.png" class="card-img-"  alt="...">
+            <img src="img/priview2.png" class="card-img-"  alt="...">
             <div class="card-body text-center">
               <p class="card-text text-white">A modern web design inspired by course projec 💡 </p>
               <a href="https://ghersi-meriem.github.io/Web-Design-Agency-Project-/" class="btn btn-light rounded-pill text-white">View</a>
@@ -409,7 +409,7 @@ class="btn-outline-primary d-lg-none position-absolute top-0 end-0 m-3 mt-1 simp
       <div class="carousel-item p-5">
         <div class="d-flex justify-content-center">
           <div class="card  ">
-            <img src="img/لقطة الشاشة 2025-07-01 215420.png"     class="card-img-top" alt="...">
+            <img src="img/preview1.png"     class="card-img-top" alt="...">
             <div class="card-body text-center">
               <p class="card-text text-white">Portfolio 🚀</p>
               <a href="#home" class="btn btn-light rounded-pil text-white">View</a>
