--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+   <meta name="description" content="Welcome to the portfolio of Meriem Ghersi, a passionate web developer and designer. Explore my creative projects, coding skills, and design work.">
+  <meta name="keywords" content="Meriem Ghersi, web developer, web designer, portfolio, HTML, CSS, JavaScript, UI, UX, front-end, personal website">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
       href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
     />
-    <title>Document</title>
+    <title>Meriem Ghersi | Web Developer & Designer Portfolio</title>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link rel="stylesheet" href="style.css" />
   </head>
